--- a/jobs.html
+++ b/jobs.html
@@ -62,7 +62,9 @@
             </li>
             <li data-category="internships" data-hours="0-10">
                 <h4>Internship Position 1</h4>
-                <p>Summer internship with a focus on sustainability, 0-10 hours per week.</p>
+                <p> Clearable Talent Pipeline (CTP) pilot program, which will be launching its second cohort in Spring 2025 and starting applications on September 2nd.
+                The CTP is an initiative taken by our directors, Dr. Damon Woodard and Dr. Domenic Forte, to create a selective talent pool of high-performing undergraduate students interested in pursuing careers in the National Security community and provide them with knowledge and research experience with AI and Machine Learning and start them early on their paths to earning a Security Clearance. There is a huge talent deficit for AI research in the Federal Government with growing concerns that need to be addressed, and we have support from several recruiters interested in filling their ranks.
+                This is a Spring to Fall program open to all students in the Herbert Wertheim College of Engineering with a $5000 stipend compensating students for 10 hours of guided research and attendance of meetings. 
             </li>
         </ul>
     </section>
