--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     </header>
 
     <section>
+        <!-- Welcome message -->
+        <h3>Latest News</h3>
+        <p>Welcome to our club's website. Stay tuned for updates!</p>
+
         <!-- Page content -->
     </section>
 
