--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header>
-        <!-- Add your logo here -->
-        <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo"> 
+        <!-- Add your logo here and make it smaller -->
+        <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo">
 
-        <h1>Job Listings</h1>
+        <!-- Title of the page -->
+        <h1>American Society of Agricultural and Biological Engineers</h1>
         <subheader>
             <h2>Florida Student Branch</h2>
             <nav>
