--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <header>
-        <!-- Add your logo here and make it smaller -->
-        <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo">
+        <div class="logo-title">
+            <!-- Add your logo here -->
+            <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo"> 
 
-        <!-- Title of the page -->
-        <h1>American Society of Agricultural and Biological Engineers</h1>
+            <!-- Title of the page -->
+            <h1>American Society of Agricultural and Biological Engineers</h1>
+        </div>
+        
         <subheader>
             <h2>Florida Student Branch</h2>
             <nav>
@@ -38,7 +41,6 @@
     </footer>
 </body>
 </html>
-
 
 
 
