--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <header>
-        <div class="logo-title">
-            <!-- Add your logo here -->
-            <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo"> 
+        <!-- Logo slightly bigger -->
+        <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo"> 
 
-            <!-- Title of the page -->
-            <h1>American Society of Agricultural and Biological Engineers</h1>
-        </div>
-        
+        <!-- Title centered -->
+        <h1>American Society of Agricultural and Biological Engineers</h1>
+
+        <!-- Subtitle centered -->
         <subheader>
             <h2>Florida Student Branch</h2>
             <nav>
