--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
     <header>
-        <!-- Logo slightly bigger -->
-        <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo"> 
+        <div class="logo-title">
+            <!-- Add your logo here -->
+            <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo"> 
 
-        <!-- Title centered -->
-        <h1>American Society of Agricultural and Biological Engineers</h1>
-
-        <!-- Subtitle centered -->
-        <subheader>
-            <h2>Florida Student Branch</h2>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="jobs.html">Job Listings</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                </ul>
-            </nav>
-        </subheader>
+            <div class="header-text">
+                <!-- Title centered -->
+                <h1>American Society of Agricultural and Biological Engineers</h1>
+                <subheader>
+                    <h2>Florida Student Branch</h2>
+                </subheader>
+            </div>
+        </div>
+        
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="jobs.html">Job Listings</a></li>
+                <li><a href="about.html">About Us</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section>
