--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <!-- Logo slightly bigger -->
-        <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo"> 
+    <div class="wrapper">
+        <header>
+            <!-- Centered logo -->
+            <img src="https://github.com/marioblue5/marioblue5.github.io/blob/main/asabe.png?raw=true" alt="ASABE Logo" class="logo"> 
 
-        <!-- Title centered -->
-        <h1>American Society of Agricultural and Biological Engineers</h1>
+            <!-- Centered title -->
+            <h1>American Society of Agricultural and Biological Engineers</h1>
 
-        <!-- Subtitle centered -->
-        <subheader>
-            <h2>Florida Student Branch</h2>
+            <!-- Centered subtitle -->
+            <subheader>
+                <h2>Florida Student Branch</h2>
+            </subheader>
+
+            <!-- Navigation menu -->
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -24,20 +28,19 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
-        </subheader>
-    </header>
+        </header>
 
-    <section>
-        <!-- Welcome message -->
-        <h3>Latest News</h3>
-        <p>Welcome to our club's website. Stay tuned for updates!</p>
+        <section>
+            <!-- Welcome message -->
+            <h3>Latest News</h3>
+            <p>Welcome to our club's website. Stay tuned for updates!</p>
+        </section>
 
-        <!-- Page content -->
-    </section>
-
-    <footer>
-        <p>&copy;2024 UF ASABE. All rights reserved.</p>
-    </footer>
+        <!-- The sticky footer -->
+        <footer>
+            <p>&copy;2024 UF ASABE. All rights reserved.</p>
+        </footer>
+    </div>
 </body>
 </html>
 
