--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Listings</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,16 +31,17 @@
         </header>
 
         <section>
-            <!-- Welcome message -->
-            <h3>Latest News</h3>
-            <p>Welcome to our club's website. Stay tuned for updates!</p>
+            <!-- Home page content -->
+            <h3>Welcome to ASABE UF!</h3>
+            <p>We are the Florida Student Branch of the American Society of Agricultural and Biological Engineers. Stay tuned for updates and upcoming events!</p>
         </section>
 
-        <!-- The sticky footer -->
+        <!-- Sticky footer -->
         <footer>
             <p>&copy;2024 UF ASABE. All rights reserved.</p>
         </footer>
     </div>
 </body>
 </html>
+
 
