--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <!-- Home page content -->
             <h3>Welcome to ASABE UF!</h3>
             <p>We are the Florida Student Branch of the American Society of Agricultural and Biological Engineers. Stay tuned for updates and upcoming events!</p>
+            <p>Upcoming GBM Schedule: Sep 25, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16 </p>
         </section>
 
         <!-- Sticky footer -->
