--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h3>Welcome to ASABE UF!</h3>
             <p>We are the Florida Student Branch of the American Society of Agricultural and Biological Engineers. Stay tuned for updates and upcoming events!</p>
             <p>Upcoming GBM Schedule: Sep 25, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16 </p>
+            <p>Event reminders: Homecoming float inventory and clean up, this Sunday 9/15 @2 pm </p>
         </section>
 
         <!-- Sticky footer -->
