--- a/jobs.html
+++ b/jobs.html
@@ -63,7 +63,12 @@
                 This is a Spring to Fall program open to all students in the Herbert Wertheim College of Engineering with a $5000 stipend compensating students for 10 hours of guided research and attendance of meetings. </p>    
                 <p>For more details, visit the <a href="https://fins.institute.ufl.edu/index.php/talent-pipeline/" target="_blank">Talent Pipeline</a> page.</p>
             </li>
-            
+            <li data-category="jobs" data-hours="all">
+                <h4>Job Position</h4>
+                <p>Please see attached graduate research opportunities available in Dr. Tiffany Messer's mesoLab at the University of Kentucky.</p>
+                <a href="https://github.com/marioblue5/marioblue5.github.io/blob/main/MesserGraduatePostionOpenings.pdf" target="_blank">Download Job Listings (PDF)</a>
+            </li>
+
         </ul>
     </section>
 
