--- a/jobs.html
+++ b/jobs.html
@@ -66,7 +66,7 @@
             <li data-category="jobs" data-hours="all">
                 <h4>Job Position</h4>
                 <p>Please see attached graduate research opportunities available in Dr. Tiffany Messer's mesoLab at the University of Kentucky.</p>
-                <a href="https://github.com/marioblue5/marioblue5.github.io/blob/main/MesserGraduatePostionOpenings.pdf" target="_blank">Download Job Listings (PDF)</a>
+                <a href="file:///C:/Users/chloe/Downloads/MesserGraduatePostionOpenings.pdf" download="Job_Listings_ASABE.pdf">Download Job Listings (PDF)</a>
             </li>
 
         </ul>
