--- a/jobs.html
+++ b/jobs.html
@@ -49,7 +49,7 @@
         <!-- Job Listings Section -->
         <ul id="jobList">
             <li data-category="research" data-hours="40">
-                <h4>Research Position 1</h4>
+                <h4>Research Position</h4>
                 <p>Full-time Lab technician position in the Environmental Soil Chemistry Laboratory at the Soil, Water, and Ecosystem Sciences Department at the University of Florida on our main campus in Gainesville to be filled by an applicant with a BS or higher degree. The work consists of anything from weighing soil samples, making chemical reagents, preparing samples for various soil chemical analyses, maintaining clean laboratory areas and other general lab duties. Initial training will be provided, although prior lab experience and the ability to conduct preliminary data analyses will be an added advantage.
                 this is an Other Personnel Services (OPS) position, available immediately and will end June 30, 2025. However, there is a likelihood of the extension of the current grant for another year.</p>
                 <p>Work hours: 40 hours a week.</p>    
@@ -57,7 +57,7 @@
                 <p>Contact: lilitvardanyan@ufl.edu</p>
             </li>
             <li data-category="internships" data-hours="0-10">
-                <h4>Internship Position 1</h4>
+                <h4>Internship Position</h4>
                 <p> Clearable Talent Pipeline (CTP) pilot program, which will be launching its second cohort in Spring 2025 and starting applications on September 2nd.
                 The CTP is an initiative taken by our directors, Dr. Damon Woodard and Dr. Domenic Forte, to create a selective talent pool of high-performing undergraduate students interested in pursuing careers in the National Security community and provide them with knowledge and research experience with AI and Machine Learning and start them early on their paths to earning a Security Clearance. There is a huge talent deficit for AI research in the Federal Government with growing concerns that need to be addressed, and we have support from several recruiters interested in filling their ranks.
                 This is a Spring to Fall program open to all students in the Herbert Wertheim College of Engineering with a $5000 stipend compensating students for 10 hours of guided research and attendance of meetings. </p>    
