--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             <p>We are the Florida Student Branch of the American Society of Agricultural and Biological Engineers. Stay tuned for updates and upcoming events!</p>
             <p>Upcoming GBM Schedule: Sep 25, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16 </p>
             <p>Event reminders: </p>
-            <p>Homecoming float inventory and clean up, this Sunday 9/15 @2pm </p>
-            <p>Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</p>
+            <p>-Homecoming float inventory and clean up, this Sunday 9/15 @2pm </p>
+            <p>-Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</p>
+            <p>-Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.</p>
         </section>
 
         <!-- Sticky footer -->
