--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <p>-Homecoming float inventory and clean up, this Sunday 9/15 @2pm </p>
             <p>-Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</p>
             <p>-Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.</p>
+            <a href="files/list-of-employers.pdf" download="Employers_List_ASABE.pdf">Download Employer List (PDF)</a>
         </section>
 
         <!-- Sticky footer -->
