--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
             <p>-Homecoming float inventory and clean up, this Sunday 9/15 @2pm </p>
             <p>-Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</p>
             <p>-Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.</p>
-            <a href="files/list-of-employers.pdf" download="Employers_List_ASABE.pdf">Download Employer List (PDF)</a>
+            <p>ExonnMobil Resume workshop, Monday and Tuesday, 9/9 and 9/10.</p>
+            <p>Milliken Lunch & Learn, Wednesday, 9/11.</p>
+            <p>Blue Origin info session,  Wednesday, 9/11.</p>
+            <p>Suffolk Construction Lunch & Learn, Wednesday, 9/11.</p>
+            <p>Disney college program, Thursday, 9/12.</p>
         </section>
 
         <!-- Sticky footer -->
