--- a/index.html
+++ b/index.html
@@ -34,16 +34,19 @@
             <!-- Home page content -->
             <h3>Welcome to ASABE UF!</h3>
             <p>We are the Florida Student Branch of the American Society of Agricultural and Biological Engineers. Stay tuned for updates and upcoming events!</p>
-            <p>Upcoming GBM Schedule: Sep 25, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16 </p>
-            <p>Event reminders: </p>
-            <p>    Homecoming float inventory and clean up, this Sunday 9/15 @2pm </p>
-            <p>    Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</p>
-            <p>    Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.</p>
-            <p>        ExonnMobil Resume workshop, Monday and Tuesday, 9/9 and 9/10.</p>
-            <p>        Milliken Lunch & Learn, Wednesday, 9/11.</p>
-            <p>        Blue Origin info session,  Wednesday, 9/11.</p>
-            <p>        Suffolk Construction Lunch & Learn, Wednesday, 9/11.</p>
-            <p>        Disney college program, Thursday, 9/12.</p>
+            <p>Upcoming GBM Schedule: Sep 25, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16.</p>
+            <p>Event reminders:</p>
+<ul>
+    <li>Homecoming float inventory and clean up, this Sunday 9/15 @2pm</li>
+    <li>Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</li>
+    <li>Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.</li>
+    <li>ExxonMobil Resume workshop, Monday and Tuesday, 9/9 and 9/10.</li>
+    <li>Milliken Lunch & Learn, Wednesday, 9/11.</li>
+    <li>Blue Origin info session, Wednesday, 9/11.</li>
+    <li>Suffolk Construction Lunch & Learn, Wednesday, 9/11.</li>
+    <li>Disney college program, Thursday, 9/12.</li>
+</ul>
+
         </section>
 
         <!-- Sticky footer -->
