--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 <ul>
     <li>Homecoming float inventory and clean up, this Sunday 9/15 @2pm</li>
     <li>Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</li>
-    <li>Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.</li>
-    <li>ExxonMobil Resume workshop, Monday and Tuesday, 9/9 and 9/10.</li>
-    <li>Milliken Lunch & Learn, Wednesday, 9/11.</li>
-    <li>Blue Origin info session, Wednesday, 9/11.</li>
-    <li>Suffolk Construction Lunch & Learn, Wednesday, 9/11.</li>
-    <li>Disney college program, Thursday, 9/12.</li>
+    <li>Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.
+        <ul>
+            <li>ExxonMobil Resume workshop, Monday and Tuesday, 9/9 and 9/10.</li>
+            <li>Milliken Lunch & Learn, Wednesday, 9/11.</li>
+            <li>Blue Origin info session, Wednesday, 9/11.</li>
+            <li>Suffolk Construction Lunch & Learn, Wednesday, 9/11.</li>
+            <li>Disney college program, Thursday, 9/12.</li>
+        </ul>
+    </li>
 </ul>
 
         </section>
