--- a/jobs.html
+++ b/jobs.html
@@ -31,6 +31,7 @@
             <option value="research">Research</option>
             <option value="jobs">Jobs</option>
             <option value="internships">Internships</option>
+            <option value="graduate school">Graduate School</option>
         </select>
 
         <!-- Filter by Hours Per Week -->
@@ -68,7 +69,11 @@
                 <p>Please see attached graduate research opportunities available in Dr. Tiffany Messer's mesoLab at the University of Kentucky.</p>
                 <a href="MesserGraduatePostionOpenings.pdf" download="Job_Listings_ASABE.pdf">Download Job Listings (PDF)</a>
             </li>
-
+            <li data-category="graduate school" data-hours="all">
+                <h4>Graduate School</h4>
+                <p>Grad School in Australia -- Space Biology and more :)</p>
+                <p>For more details, visit the <a href="https://www.latrobe.edu.au/research/graduate-research/fees-and-scholarships/scholarships/project" target="_blank">Info Page</a> page.</p>
+            </li>
         </ul>
     </section>
 
