--- a/jobs.html
+++ b/jobs.html
@@ -72,7 +72,7 @@
             <li data-category="graduate school" data-hours="all">
                 <h4>Graduate School</h4>
                 <p>Grad School in Australia -- Space Biology and more :)</p>
-                <p>For more details, visit the <a href="https://www.latrobe.edu.au/research/graduate-research/fees-and-scholarships/scholarships/project" target="_blank">Info Page</a> page.</p>
+                <p>For more details, visit the <a href="https://www.latrobe.edu.au/research/graduate-research/fees-and-scholarships/scholarships/project" target="_blank">Info Page</a>.</p>
             </li>
         </ul>
     </section>
