--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Styles for the logo as background */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            background-image: url('path-to-your-logo.jpg'); /* Replace with your actual logo path */
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .wrapper {
+            text-align: center;
+            padding: 20px;
+        }
+
+        /* Styles to make sure content is readable */
+        header, section, footer {
+            background-color: rgba(255, 255, 255, 0.8); /* White background with transparency */
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -33,20 +62,19 @@
             <p>We are the Florida Student Branch of the American Society of Agricultural and Biological Engineers. Stay tuned for updates and upcoming events!</p>
             <p>Upcoming GBM Schedule: Sep 25, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16.</p>
             <p>Event reminders:</p>
-<ul>
-    <li>Homecoming float inventory and clean up, this Sunday 9/15 @2pm</li>
-    <li>Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</li>
-    <li>Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.
-        <ul>
-            <li>ExxonMobil Resume workshop, Monday and Tuesday, 9/9 and 9/10.</li>
-            <li>Milliken Lunch & Learn, Wednesday, 9/11.</li>
-            <li>Blue Origin info session, Wednesday, 9/11.</li>
-            <li>Suffolk Construction Lunch & Learn, Wednesday, 9/11.</li>
-            <li>Disney college program, Thursday, 9/12.</li>
-        </ul>
-    </li>
-</ul>
-
+            <ul>
+                <li>Homecoming float inventory and clean up, this Sunday 9/15 @2pm</li>
+                <li>Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</li>
+                <li>Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.
+                    <ul>
+                        <li>ExxonMobil Resume workshop, Monday and Tuesday, 9/9 and 9/10.</li>
+                        <li>Milliken Lunch & Learn, Wednesday, 9/11.</li>
+                        <li>Blue Origin info session, Wednesday, 9/11.</li>
+                        <li>Suffolk Construction Lunch & Learn, Wednesday, 9/11.</li>
+                        <li>Disney college program, Thursday, 9/12.</li>
+                    </ul>
+                </li>
+            </ul>
         </section>
 
         <!-- Sticky footer -->
