--- a/index.html
+++ b/index.html
@@ -31,20 +31,14 @@
             <!-- Home page content -->
             <h3>Welcome to ASABE UF!</h3>
             <p>We are the Florida Student Branch of the American Society of Agricultural and Biological Engineers. Stay tuned for updates and upcoming events!</p>
-            <p>Upcoming GBM Schedule: Sep 25, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16.</p>
+            <p>Upcoming GBM Schedule: Sep 23, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16.</p>
             <p>Event reminders:</p>
             <ul>
-                <li>Homecoming float inventory and clean up, this Sunday 9/15 @2pm</li>
-                <li>Join Kimley-Horn recruiters and ABE alumni on Monday, September 16 @3pm to learn about the opportunities available for careers and internships.</li>
-                <li>Below is a list of companies visiting campus this week. Don't miss your chance to connect with them during the various Fall campus recruiting seasons.
-                    <ul>
-                        <li>ExxonMobil Resume workshop, Monday and Tuesday, 9/9 and 9/10.</li>
-                        <li>Milliken Lunch & Learn, Wednesday, 9/11.</li>
-                        <li>Blue Origin info session, Wednesday, 9/11.</li>
-                        <li>Suffolk Construction Lunch & Learn, Wednesday, 9/11.</li>
-                        <li>Disney college program, Thursday, 9/12.</li>
-                    </ul>
-                </li>
+                <li> Resume workshop before career fair at the next GBM Sep 23rd @5 pm </li>
+                <li>Career Showcase Days and Location:</li>
+                <li>Sep. 23rd, Computer & Information Science & Engineering and AI career fair. O’Connell Center, 1 to 6 pm. Students Check-in: Gate 3.</li>
+                <li>Sep. 24th, Non-tech Day. O’Connell Center, 9 am to 3 pm. Students Check-in: Gate 3.</li>
+                <li>Sep. 25th, Tech Day. O’Connell Center, 9 am to 3 pm. Student Check-in: Gate 3.</li>
             </ul>
         </section>
 
