--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <li>Sep. 25th, Tech Day. O’Connell Center, 9 am to 3 pm. Student Check-in: Gate 3.</li>
                 </ul>
             </ul>
+            <p>Remember to get started on academic planning and advising appointments to get your registration holds removed!!!</p>
         </section>
 
         <!-- Sticky footer -->
