--- a/jobs.html
+++ b/jobs.html
@@ -111,7 +111,7 @@
                 <p>For more details, visit the <a href="https://www.latrobe.edu.au/research/graduate-research/fees-and-scholarships/scholarships/project" target="_blank">Info Page</a>.</p>
             </li>
             <li data-category="scholarships" data-hours="all">
-                <h4>Scholarships</h4>
+                <h4>Scholarship Opportunity</h4>
             <p>The revised ABE scholarship application has now been finalized. BE and AOM students are urged to apply for the ABE scholarships. This scholarship will be awarded in Spring 2025. Use this link and be sure to complete the ENTIRE application. These scholarships are only available to students in the ABE Department (any major).Please remember the deadline is October 15!</p>
             <p>To appy, visit the <a href="https://ufl.qualtrics.com/jfe/form/SV_031X7TO92Ei0xqS" target="_blank">application link</a>.</p>
         </ul>
