--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     <li>Sep. 23rd, Computer & Information Science & Engineering and AI career fair. O’Connell Center, 1 to 6 pm. Students Check-in: Gate 3.</li>
                     <li>Sep. 24th, Non-tech Day. O’Connell Center, 9 am to 3 pm. Students Check-in: Gate 3.</li>
                     <li>Sep. 25th, Tech Day. O’Connell Center, 9 am to 3 pm. Student Check-in: Gate 3.</li>
+                    <li>List of employeers: A Duda & Sons, Arazoza Brothers Corp., Cal-Maine Foods Inc., Coastal Greenery, Costa Farms, Davey Resource Group, JBS USA, Jones Edmunds & Associates, Inc., J.R. Simplot, Kimley-Horn, Lipman Family Farms, Mars, Suwannee River Water Management District, The Kraft Heinz Company, Topco Associates, USADA NRCS</li>
                 </ul>
+                
             </ul>
             <p>Remember to get started on academic planning and advising appointments to get your registration holds removed!!!</p>
         </section>
