--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <p>Upcoming GBM Schedule: Sep 23, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16.</p>
             <p>Event reminders:</p>
             <ul>
+                <li> Lake Wauburg social this Sunday 9/22 @11am-2pm </li>
                 <li> Resume workshop before career fair at the next GBM Sep 23rd @5 pm </li>
                 <li>Career Showcase Days and Location:</li>
                 <ul>
